# brepdiff

./: .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  entrypoint.sh  pyproject.toml  requirements.txt
configs/: abc.yaml  custom_overfit.yaml  deepcad.yaml
docs/: OVERFIT_REPORT.md  custom_overfit.md  evaluation.md  installation.md  training.md  viewer.md
my_data/: 00031214_9643da4778ab413381cc7038_step_006.step  00031214_9643da4778ab413381cc7038_step_006_step.stp
scripts/: run.py  train_custom_overfit.sh
scripts/blender/: render_for_fid.py  render_step.py  render_uvgrid.py  render_uvgrid_paper_figure.py
scripts/metrics/: evaluate_step_files.py  test_fid_cad.py  test_pc_metrics.py  test_speed.py
scripts/postprocessing/: npz_pp.py  npz_to_h5.py  process_data_list.py
scripts/test/: parse_solid_test.py  test_custom_dataset.py
scripts/visualization/: cat_imgs.py  editor.py  vis_step.py
src/brepdiff/: config.py  lit_model.py
src/brepdiff/datasets/: __init__.py  _metadata.py  abc_dataset.py  base_dataset.py  custom_dataset.py
src/brepdiff/diffusion/: __init__.py  base.py  gaussian_diffusion.py  separate_gaussian_diffusion.py  utils.py
src/brepdiff/metrics/: fid.py  inception.py  pc_metrics.py  resnet.py
src/brepdiff/models/: __init__.py  base_model.py  brepdiff.py  uv_vae.py
src/brepdiff/postprocessing/: intersection_manager.py  occ_brep_builder.py  occ_wrapper.py  postprocessor.py
src/brepdiff/primitives/: primitive.py  uvgrid.py
src/brepdiff/utils/: acc_logger.py  brep_checker.py  brep_sampler.py  common.py  convert_utils.py  geometry.py  (+5 more)
(+24 files in other folders)
