[project]
authors = [
    { name = "Dongsu Zhang", email = "96lives@snu.ac.kr" },
    { name = "Mingi Lee", email = "mingi1019@snu.ac.kr" },
    { name = "Clément Jambon", email = "cjambon@mit.edu" },
]
name = "brepdiff"
version = "0.0.1"
description = "Single stage brep diffusion model"
readme = "README.md"
requires-python = ">=3.9,<3.10"  # for installing pymesh required in https://github.com/princeton-vl/DPVO_Docker/issues/7
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
